# mcp-test-openai

./: .gitignore  README.md  pyproject.toml  run_server.py
src/examples/: run_server.py
src/mcp_filesystem/: __init__.py  cli.py  exceptions.py  server.py
src/mcp_openai/: README.md  mcp_client.py  openai_agent.py  openai_tools.py  run.py
